# CMake_practice_newbie

./: README.md
Friend_manage/: CMakeLists.txt
Friend_manage/include/: friend.h  gay.h
Friend_manage/main/: main.c
Friend_manage/remove_friend/: CMakeLists.txt  remove_friend.c  remove_friend.h
Friends/: CMakeLists.txt
Friends/source/: friend.c  gay.c
Student_Manager/: CMakeLists.txt  cmake_build.cmd
Student_Manager/AverageScore/: AverageScore.c  AverageScore.h  CMakeLists.txt
Student_Manager/Include/: id_check.h  student.h
Student_Manager/main/: CMakeLists.txt  main.c
Student_Manager/src/: CMakeLists.txt  id_check.c  student.c
fmt_test/: CMakeLists.txt  build_cmake.bat  fmt_test.cpp
